--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a reactjs by sheeshpal",
   "scripts": {
     "start": "parcel index.html",
-    "build":"parcel build index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -31,10 +31,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
-  "browserlist":[
+  "browserlist": [
     "last 2 version"
-   
   ]
 }
